[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RandoGem"
version = "0.0.1"
license = "MIT"
description = "A simple web app to find a random movie to watch on popular streaming services."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
    "requests",
    "gunicorn",
]

[project.urls]
Homepage = "https://github.com/bscott711/RandoGem" 